--- a/src/index.css
+++ b/src/index.css
@@ -15,24 +15,28 @@ body {
 }
 
 .logo {
-  background: #1B6392 !important;
+  background: #001529 !important;
   padding: 6px 0px;
 }
+
 .ant-layout {
   min-height: 100vh;
 }
+
 .ant-layout-sider {
   flex: 0 0 250px !important;
   max-width: 250px !important;
   min-width: 250px !important;
   width: 250px !important;
 }
+
 .ant-layout-sider-collapsed {
   flex: 0 0 80px !important;
   max-width: 80px !important;
   min-width: 80px !important;
   width: 80px !important;
 }
+
 .sm-logo {
   display: none;
 }
@@ -40,36 +44,45 @@ body {
 .ant-layout-sider-collapsed .sm-logo {
   display: block;
 }
+
 .ant-layout-sider-collapsed .lg-logo {
   display: none;
 }
+
 .logo {
-  background-color: #1B6392;
+  background-color: #001529;
   margin: 0;
 }
+
 main {
   height: 85vh;
   overflow-y: scroll;
   background-color: transparent !important;
 }
+
 main::-webkit-scrollbar {
   width: 0px;
 }
+
 .ant-menu-title-content {
   font-size: 16px;
 }
+
 .ant-layout-header h5 {
   line-height: 20px;
   font-size: 14px;
 }
+
 .ant-layout-header p {
   line-height: 20px;
   font-size: 13px;
 }
+
 .ant-layout-header div .badge {
   top: 16px;
   right: -6px;
 }
+
 .error {
   color: red;
   font-size: 12px;
